--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 	<meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, user-scalable=no" />
-	<title>Mantine Vite template</title>
+	<title>FIRMS Explorer</title>
 </head>
 
 <body>
